<resources>
    <string name="app_name">Autopoe App</string>
    <string name="Mudel1">Honda NSX</string>
    <string name="PickModel">Pick your model</string>
    <string name="Description">The new Hybrid super car</string>
    <string name="motor">Motor</string>
    <string name="title_activity_payment">Payment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="time">2.8s</string>
    <string name="time1">2.1s</string>
    <string name="time2">4.9s</string>
    <string name="Design">Design</string>
    <string name="speed">300</string>
    <string name="speed1">331</string>
    <string name="speed2">250</string>
    <string name="inhour">0-100 km/h</string>
    <string name="perhour">km/h</string>
    <string name="Gasoil">VTEC Gasoil</string>
    <string name="Diesel">VTEC Diesel</string>
    <string name="Hybrid">VTEC Hybrid</string>
    <string name="Premium">PREMIUM Design Pack</string>
    <string name="Coupe">COUPE Design Pack</string>
    <string name="Sport">Sport Design Pack</string>
    <string name="Order">Order now ></string>
    <string name="Mudel2">Audi R8</string>
    <string name="Description1">The essence of charm</string>
    <string name="V10S">"FSI V10 S tronic 7AT "</string>
    <string name="V10QUATRO">Performance V10 quattro S tronic 7AT AWD</string>
    <string name="V10QUATR">V10 quattro S tronic 7AT AWD</string>
    <string name="Mudel">Mercedes S-CLASS</string>
    <string name="Description2">Timeless design</string>
    <string name="Grand">Grand Tourer pack</string>
    <string name="SLAMG">SL 65 AMG</string>
    <string name="SL4">SL 400</string>
    <string name="SL45">SL 450/400</string>
    <string name="label_buy_now">BUY NOW</string>
    <string name="Account">Account</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Back">Back</string>
    <string name="Email">Email: </string>
    <string name="Password">Password: </string>

</resources>